# credible_takehome

./: email_click_class_eda.ipynb  email_click_model.ipynb  main.py  pyproject.toml
data/: email_camp_data.csv
docs/: gilliland_credible_takehome.pptx  ~$gilliland_credible_takehome.pptx
