[project]
name = "credible-takehome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "feature-engine>=1.8.3",
    "imbalanced-learn>=0.12.4",
    "lightgbm>=4.6.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.47.0",
    "statsmodels>=0.14.4",
    "xgboost>=2.1.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
]
